Add a very draft proto implementation of the snapshot inspector

--- a/docs/examples/DataSet/Working with snapshots.ipynb
+++ b/docs/examples/DataSet/Working with snapshots.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
       " 'name': 'p',\n",
       " 'post_delay': 0,\n",
       " 'raw_value': 123,\n",
-      " 'ts': '2018-08-02 12:01:19',\n",
+      " 'ts': '2018-08-02 16:08:31',\n",
       " 'unit': 'kg',\n",
       " 'value': 123}\n"
      ]
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
       "                                   'name': 'input',\n",
       "                                   'post_delay': 0,\n",
       "                                   'raw_value': 0,\n",
-      "                                   'ts': '2018-08-02 12:01:19',\n",
+      "                                   'ts': '2018-08-02 16:08:31',\n",
       "                                   'unit': 'V',\n",
       "                                   'vals': '<Numbers -800<=v<=400>',\n",
       "                                   'value': 0},\n",
@@ -233,7 +233,7 @@
       "                                    'name': 'output',\n",
       "                                    'post_delay': 0,\n",
       "                                    'raw_value': 0,\n",
-      "                                    'ts': '2018-08-02 12:01:19',\n",
+      "                                    'ts': '2018-08-02 16:08:31',\n",
       "                                    'unit': 'V',\n",
       "                                    'vals': '<Numbers -800<=v<=400>',\n",
       "                                    'value': 0}},\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "'instr'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
       "                                                                'model': 'instr',\n",
       "                                                                'serial': None,\n",
       "                                                                'vendor': None},\n",
-      "                                                  'ts': '2018-08-02 12:01:19',\n",
+      "                                                  'ts': '2018-08-02 16:08:31',\n",
       "                                                  'unit': '',\n",
       "                                                  'vals': '<Anything>',\n",
       "                                                  'value': {'firmware': None,\n",
@@ -334,7 +334,7 @@
       "                                                    'name': 'input',\n",
       "                                                    'post_delay': 0,\n",
       "                                                    'raw_value': 0,\n",
-      "                                                    'ts': '2018-08-02 12:01:19',\n",
+      "                                                    'ts': '2018-08-02 16:08:31',\n",
       "                                                    'unit': 'V',\n",
       "                                                    'vals': '<Numbers '\n",
       "                                                            '-800<=v<=400>',\n",
@@ -349,7 +349,7 @@
       "                                                     'post_delay': 0,\n",
       "                                                     'raw_value': 0,\n",
       "                                                     'ts': '2018-08-02 '\n",
-      "                                                           '12:01:19',\n",
+      "                                                           '16:08:31',\n",
       "                                                     'unit': 'V',\n",
       "                                                     'vals': '<Numbers '\n",
       "                                                             '-800<=v<=400>',\n",
@@ -362,7 +362,7 @@
       "                      'name': 'p',\n",
       "                      'post_delay': 0,\n",
       "                      'raw_value': 456,\n",
-      "                      'ts': '2018-08-02 12:01:19',\n",
+      "                      'ts': '2018-08-02 16:08:31',\n",
       "                      'unit': 'kg',\n",
       "                      'value': 456}}}\n"
      ]
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,14 +421,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting experimental run with id: 68\n"
+      "Starting experimental run with id: 69\n"
      ]
     }
    ],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
       "                                                                            'serial': None,\n",
       "                                                                            'vendor': None},\n",
       "                                                              'ts': '2018-08-02 '\n",
-      "                                                                    '12:01:19',\n",
+      "                                                                    '16:08:31',\n",
       "                                                              'unit': '',\n",
       "                                                              'vals': '<Anything>',\n",
       "                                                              'value': {'firmware': None,\n",
@@ -537,7 +537,7 @@
       "                                                                'post_delay': 0,\n",
       "                                                                'raw_value': 0,\n",
       "                                                                'ts': '2018-08-02 '\n",
-      "                                                                      '12:01:19',\n",
+      "                                                                      '16:08:31',\n",
       "                                                                'unit': 'V',\n",
       "                                                                'vals': '<Numbers '\n",
       "                                                                        '-800<=v<=400>',\n",
@@ -553,7 +553,7 @@
       "                                                                 'post_delay': 0,\n",
       "                                                                 'raw_value': 0,\n",
       "                                                                 'ts': '2018-08-02 '\n",
-      "                                                                       '12:01:19',\n",
+      "                                                                       '16:08:31',\n",
       "                                                                 'unit': 'V',\n",
       "                                                                 'vals': '<Numbers '\n",
       "                                                                         '-800<=v<=400>',\n",
@@ -566,7 +566,7 @@
       "                                  'name': 'p',\n",
       "                                  'post_delay': 0,\n",
       "                                  'raw_value': 456,\n",
-      "                                  'ts': '2018-08-02 12:01:19',\n",
+      "                                  'ts': '2018-08-02 16:08:31',\n",
       "                                  'unit': 'kg',\n",
       "                                  'value': 456}}}}\n"
      ]
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,6 +599,37 @@
     "## How to conveniently inspect the snapshot\n",
     "\n",
     "This functionality is not yet available in QCoDeS. Nevertheless, soon a simple and convenient function will be implemented to streamline the work with huge snapshots."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qcodes.utils.snapshot_tools import inspect_snapshot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "station.instruments.instr --- instr (qcodes.tests.instrument_mocks.DummyInstrument)\n",
+      "station.instruments.instr.parameters.IDN --- IDN: IDN = {'vendor': None, 'model': 'instr', 'serial': None, 'firmware': None} \n",
+      "station.instruments.instr.parameters.input --- input: Gate input = 0 V\n",
+      "station.instruments.instr.parameters.output --- output: Gate output = 0 V\n",
+      "station.parameters.p --- p: Parameter P = 456 kg\n",
+      "station.default_measurement --- []\n"
+     ]
+    }
+   ],
+   "source": [
+    "inspect_snapshot(snapshot_of_run, key_word='')"
    ]
   },
   {
