--- a/docs/examples/driver_examples/Qcodes_example_with_Keysight_PNA_N5222B.ipynb
+++ b/docs/examples/driver_examples/Qcodes_example_with_Keysight_PNA_N5222B.ipynb
@@ -83,7 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to: Keysight Technologies N5222B (serial:MY57041028, firmware:A.13.25.04) in 0.30s\n"
+      "Connected to: Keysight Technologies N5222B (serial:MY57041028, firmware:A.13.25.04) in 0.16s\n"
      ]
     }
    ],
@@ -127,6 +127,15 @@
    ],
    "source": [
     "pna.ask(\"CALC:PAR:CAT:EXT?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = trace.log_magnitude()"
    ]
   },
   {
