deleting and adding traces seems to work

--- a/docs/examples/driver_examples/Qcodes_example_with_Keysight_PNA_N5222B.ipynb
+++ b/docs/examples/driver_examples/Qcodes_example_with_Keysight_PNA_N5222B.ipynb
@@ -93,11 +93,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pna.channel[0].trace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TEST, S11"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pna.channel[0].add_trace(\"TEST\", \"S11\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pna.channel[1].trace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TEST, S11"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pna.channel[0].trace[\"TEST\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pna.delete_all_traces()"
+    "pna.channel[0].trace[\"TEST\"].delete()"
    ]
   },
   {
@@ -106,7 +186,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trace = pna.add_trace(\"test\", \"S11\")"
+    "pna.power(-40)\n",
+    "pna.start(100e6)\n",
+    "pna.stop(1e9)\n",
+    "pna.points(1001)"
    ]
   },
   {
@@ -115,27 +198,68 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\"TEST,S11\"'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'trace' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-aff8c8f04440>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrace\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog_magnitude\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'trace' is not defined"
+     ]
     }
    ],
    "source": [
-    "pna.ask(\"CALC:PAR:CAT:EXT?\")"
+    "data = trace.log_magnitude()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am gone\n",
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
-    "data = trace.log_magnitude()"
+    "class A: \n",
+    "    def __del__(self): \n",
+    "        print(\"I am gone\")\n",
+    "        \n",
+    "d = {\"a\": A()}\n",
+    "\n",
+    "del d[\"a\"]\n",
+    "\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': <__main__.A object at 0x000001A959EBD550>}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A: \n",
+    "    pass \n",
+    "\n",
+    "d = {\"a\": A()}\n",
+    "n = d[\"a\"]\n",
+    "del n\n",
+    "print(d)"
    ]
   },
   {
