--- a/docs/examples/Guide to the parameter node.ipynb
+++ b/docs/examples/Guide to the parameter node.ipynb
@@ -8,39 +8,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import logging\n",
-    "from qcodes import Parameter, ParameterNode\n",
-    "logging.basicConfig(level=logging.DEBUG)"
+    "The `ParameterNode` is a container that can hold parameters, and also other `ParameterNodes`.  \n",
+    "In a way, one can see a ParameterNode as a dictionary, where its items can either be other dictionaries (ParameterNodes), or values (Parameters).\n",
+    "\n",
+    "One example of a `ParameterNode` is an `Instrument`, though the `ParameterNode` does not need to be limited to actual instruments."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initializing a ParameterNode"
+    "## ParameterNode with Parameters"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A ParameterNode can be initialized with an optional name:"
+    "Here we create a ParameterNode and add a Parameter to it.  \n",
+    "Note that we do not need to specify the parameter name, it is automatically deduced from the attribute name:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node.p.name = p\n"
+     ]
+    }
+   ],
+   "source": [
+    "from qcodes import ParameterNode, Parameter\n",
+    "\n",
+    "node = ParameterNode('node')\n",
+    "node.p = Parameter(set_cmd=None, initial_value=1)  # Can also use node.add_parameter('p', set_cmd=None)\n",
+    "print('node.p.name =', node.p.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `Parameter` is registered in the ParameterNode's attribute `parameters`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ParameterNode parameter_node containing 0 parameters, 0 nodes"
+       "{'p': <qcodes.instrument.parameter.Parameter: p at 450862832>}"
       ]
      },
      "execution_count": 2,
@@ -49,27 +77,25 @@
     }
    ],
    "source": [
-    "parameter_node = ParameterNode('parameter_node')\n",
-    "parameter_node"
+    "node.parameters"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once initialized, parameters can be added to the node by settings its attributes.\n",
-    "This will register the parameter in ``parameter_node.parameters``"
+    "Similarly, `ParameterNode` is added as the parent of the `Parameter`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'new_parameter': <qcodes.instrument.parameter.Parameter: new_parameter at 1794281552864>}"
+       "ParameterNode node containing 1 parameters"
       ]
      },
      "execution_count": 3,
@@ -78,26 +104,25 @@
     }
    ],
    "source": [
-    "parameter_node.new_parameter = Parameter(set_cmd=None)\n",
-    "parameter_node.parameters"
+    "node.p.parent"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that we don't have to pass the parameter a name: by default it will use the attribute name"
+    "This is also reflected when we get a string representation of the parameter:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'new_parameter'"
+       "'node_p'"
       ]
      },
      "execution_count": 4,
@@ -106,119 +131,141 @@
     }
    ],
    "source": [
-    "parameter_node.parameters['new_parameter'].name"
+    "str(node.p)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see a summary of the parameter node as such:"
+    "**Note**: Once a `Parameter` is added to a `ParameterNode`, adding the `Parameter` to other `ParameterNodes` does not change it's parent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ParameterNode containing ParameterNodes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A ParameterNode can also contain other ParameterNodes:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parameter_node:\n",
-      "\tparameter    value\n",
-      "--------------------------------------------------------------------------------\n",
-      "new_parameter :\tNone \n"
-     ]
-    }
-   ],
-   "source": [
-    "parameter_node.print_snapshot()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Getting/setting parameter values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Once a parameter has been added to the ParameterNode, its value can be set by setting the attribute to a new value:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parameter_node.new_parameter = 42"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It is important to remember that this doesn't replace the parameter attribute with the value, it will instead set the value stored in the parameter."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Similarly, the parameter value can be obtained by simply accessing the attribute:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "42"
+       "'node_subnode_p'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parameter_node.new_parameter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Accessing the Parameter object"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For measurements, it is usually necessary to access the parameter itself instead of its value.\n",
-    "There are two ways in which we can access the parameter:\n",
+    "node.subnode = ParameterNode()\n",
     "\n",
-    "### Method 1: get item"
+    "node.subnode.p = Parameter(set_cmd=None)\n",
+    "\n",
+    "str(node.subnode.p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simplified snapshotting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When performing a measurement, a snapshot is created of all Parameters and ParameterNodes in the station.  \n",
+    "These snapshots can become quite messy:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<qcodes.instrument.parameter.Parameter: new_parameter at 1794281552864>"
+       "{'functions': {},\n",
+       " 'submodules': {},\n",
+       " '__class__': 'qcodes.instrument.parameter_node.ParameterNode',\n",
+       " 'parameters': {'p': {'value': 1,\n",
+       "   'ts': '2018-08-29 14:43:42',\n",
+       "   'raw_value': 1,\n",
+       "   '__class__': 'qcodes.instrument.parameter.Parameter',\n",
+       "   'full_name': 'node_p',\n",
+       "   'name': 'p',\n",
+       "   'label': 'P'}},\n",
+       " 'parameter_nodes': {'subnode': {'functions': {},\n",
+       "   'submodules': {},\n",
+       "   '__class__': 'qcodes.instrument.parameter_node.ParameterNode',\n",
+       "   'parameters': {'p': {'value': None,\n",
+       "     'ts': None,\n",
+       "     'raw_value': None,\n",
+       "     '__class__': 'qcodes.instrument.parameter.Parameter',\n",
+       "     'full_name': 'node_subnode_p',\n",
+       "     'name': 'p',\n",
+       "     'label': 'P'}},\n",
+       "   'parameter_nodes': {},\n",
+       "   'name': 'subnode'}},\n",
+       " 'name': 'node'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node.snapshot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Depending on the type of ParameterNode, we may only be interested in the values of the parameters and nodes.  \n",
+    "For this reason, we can improve the readability of the snapshot by turning on `simplify_snapshot`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node.simplify_snapshot = True\n",
+    "node.subnode.simplify_snapshot = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'__class__': 'qcodes.instrument.parameter_node.ParameterNode',\n",
+       " 'p': 1,\n",
+       " 'subnode': {'__class__': 'qcodes.instrument.parameter_node.ParameterNode',\n",
+       "  'p': None}}"
       ]
      },
      "execution_count": 8,
@@ -227,25 +274,33 @@
     }
    ],
    "source": [
-    "parameter_node['new_parameter']"
+    "node.snapshot()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which is a shorthand for:"
+    "## Accessing Parameters as attributes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One may have noticed that getting/setting a parameter is different from standard python classes.  \n",
+    "For parameters, this is done by function calls:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<qcodes.instrument.parameter.Parameter: new_parameter at 1794281552864>"
+       "42"
       ]
      },
      "execution_count": 9,
@@ -254,34 +309,28 @@
     }
    ],
    "source": [
-    "parameter_node.parameters['new_parameter']"
+    "node = ParameterNode()\n",
+    "node.p = Parameter(set_cmd=None)\n",
+    "node.p(42)  # Setting value\n",
+    "node.p()  # Getting value"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Method 2: calling the ParameterNode"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By first calling the ParameterNode, we access its underlying `parameters` attribute:"
+    "Compare this to a standard python class, where the attribute behaves just like the variable it represents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<qcodes.instrument.parameter.Parameter: new_parameter at 1794281552864>"
+       "1"
       ]
      },
      "execution_count": 10,
@@ -290,32 +339,32 @@
     }
    ],
    "source": [
-    "parameter_node().new_parameter"
+    "class C:\n",
+    "    pass\n",
+    "    \n",
+    "c = C()\n",
+    "c.p = 1\n",
+    "c.p"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nesting ParameterNodes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Parameter nodes can also be nested:"
+    "This can be confusing, especially if we want to convert abstract classes into `ParameterNodes` and `Parameters`.  \n",
+    "We would need to remember which classes are and are not ParameterNodes, and which attributes are and are not Parameters.  \n",
+    "As a solution to this problem, we can pass the keyword argument `use_as_atttributes`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ParameterNode parameter_node containing 1 parameters, 1 nodes"
+       "42"
       ]
      },
      "execution_count": 11,
@@ -324,57 +373,91 @@
     }
    ],
    "source": [
-    "parameter_node.nested_parameter_node = ParameterNode()\n",
-    "\n",
-    "parameter_node"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ParameterNode nested_parameter_node containing 0 parameters, 0 nodes"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parameter_node.nested_parameter_node"
+    "node = ParameterNode(use_as_attributes=True)\n",
+    "node.p = Parameter(set_cmd=None)\n",
+    "node.p = 42  # Setting value\n",
+    "node.p  # Getting value"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now also add Parameters to the nested node:"
+    "We see that now the Parameter attributes behave just like the variables they represent.  \n",
+    "There are cases, however, where you still want to access the Parameter object instead of its value.  \n",
+    "In this case, you can access the Parameter like you would in a dictionary:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<qcodes.instrument.parameter.Parameter: p at 451257232>\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "ParameterNode nested_parameter_node containing 1 parameters, 0 nodes"
+       "{'value': 42,\n",
+       " 'ts': '2018-08-29 14:43:42',\n",
+       " 'raw_value': 42,\n",
+       " '__class__': 'qcodes.instrument.parameter.Parameter',\n",
+       " 'full_name': 'p',\n",
+       " 'name': 'p',\n",
+       " 'label': 'P'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parameter_node.nested_parameter_node.nested_parameter = Parameter()\n",
-    "parameter_node.nested_parameter_node"
+    "print(repr(node['p']))\n",
+    "node['p'].snapshot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note**: The option `use_as_attributes` can have unintended consequences, as every call to the attribute will trigger it's `get` function.  \n",
+    "While this is properly handled for most functions (e.g. `vars(node)`), it could cause unnecessary calls if this is not taken into account:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Get command called\n",
+      "None\n",
+      "Get command called\n",
+      "None\n",
+      "Get command called\n",
+      "None\n",
+      "Get command called\n",
+      "None\n",
+      "Get command called\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "node = ParameterNode(use_as_attributes=True)\n",
+    "node.p = Parameter(get_cmd=lambda: print('Get command called'))\n",
+    "\n",
+    "for k in range(5):\n",
+    "    print(node.p)"
    ]
   }
  ],
@@ -394,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
